# rtmidi-rs

./: Cargo.toml  README.md  build.rs  wrapper.h
.github/actions/install-ubuntu/: action.yml
.github/workflows/: test.yml
src/: api.rs  error.rs  ffi.rs  lib.rs  midi.rs  midi_in.rs  midi_out.rs
